--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
     <meta charset="UTF-8">
     <title>nodepro</title>
   </head>
-  <body>
-  <script type="text/javascript" src="./public/main.js"></script></body>
+  <body>1
+  <script type="text/javascript" src="/main.js"></script></body>
 </html>
