--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <title></title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <title>博客</title>
+    <style>
+      html, body {
+        width:100%;
+        height: 100%;
+        font-family: "Microsoft YaHei";
+      }
+      #root{ position:relative}
+    </style>
   </head>
   <body>
-      你好
+    <div id="root">
+    </div>
   </body>
 </html>
