--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>nodepro</title>
+    <title>博客</title>
+    <style>
+      html, body {
+        width:100%;
+        height: 100%;
+        font-family: "Microsoft YaHei";
+      }
+      #root{ position:relative}
+    </style>
   </head>
-  <body>1
+  <body>
+    <div id="root">
+    </div>
   <script type="text/javascript" src="/main.js"></script></body>
 </html>
