--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         font-family: "Microsoft YaHei";
         background: #ccc;
       }
-      #root{ position:relative}
+      #root{ height: 100%;}
     </style>
   </head>
   <body>
