--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         height: 100%;
         font-family: "Microsoft YaHei";
         background: #ccc;
+        font-size: 16px;
       }
       #root{ height: 100%;}
     </style>
